--- a/PluginManager/app/src/main/res/values/strings.xml
+++ b/PluginManager/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PluginManager</string>
+    <string name="error">Error</string>
+    <string name="add">Add</string>
+    <string name="package_name">Package name</string>
+    <string name="class_name">Class name</string>
 </resources>
