--- a/PluginManager/app/src/main/res/values/strings.xml
+++ b/PluginManager/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add">Add</string>
     <string name="package_name">Package name</string>
     <string name="class_name">Class name</string>
+    <string name="search">Search</string>
 </resources>
